syntax = "proto3";

option go_package = "github.com/cmkqwerty/freight-fare-engine/types";

service Aggregator {
  rpc Aggregate(AggregateRequest) returns (None);
  rpc GetInvoice(GetInvoiceRequest) returns (Invoice);
}

message AggregateRequest {
  int32 ObuID = 1;
  double Value = 2;
  int64 Unix = 3;
}

message GetInvoiceRequest {
  int32 ObuID = 1;
}

message Invoice {
  int32 ObuID = 1;
  double TotalDistance = 2;
  double TotalAmount = 3;
}

message None {}